@@ -169,7 +169,7 @@ public:
     }
 
     inline reference operator[]( int i ) const {
-        return parent[ row + i * parent_nrow ] ;
+        return parent[ row + static_cast<R_xlen_t>(i) * parent_nrow ] ;
     }
 
     inline iterator begin(){
@@ -206,9 +206,9 @@ private:
     int parent_nrow ;
     int row ;
 
-    inline int get_parent_index(int i) const {
-        RCPP_DEBUG_4( "MatrixRow<%d>::get_parent_index(int = %d), parent_nrow = %d >> %d\n", RTYPE, i, parent_nrow, i*parent_nrow )
-        return i * parent_nrow ;
+    inline R_xlen_t get_parent_index(int i) const {
+        RCPP_DEBUG_4( "MatrixRow<%d>::get_parent_index(int = %d), parent_nrow = %d >> %d\n", RTYPE, i, parent_nrow, static_cast<R_xlen_t>(i) * parent_nrow )
+        return static_cast<R_xlen_t>(i) * parent_nrow ;
     }
 } ;
 
@@ -310,7 +310,7 @@ public:
     {} ;
 
     inline const_reference operator[]( int i ) const {
-        return parent[ row + i * parent_nrow ] ;
+        return parent[ row + static_cast<R_xlen_t>(i) * parent_nrow ] ;
     }
 
     inline const_iterator begin() const {
@@ -331,9 +331,9 @@ private:
     int parent_nrow ;
     int row ;
 
-    inline int get_parent_index(int i) const {
-        RCPP_DEBUG_4( "ConstMatrixRow<%d>::get_parent_index(int = %d), parent_nrow = %d >> %d\n", RTYPE, i, parent_nrow, i*parent_nrow )
-        return i * parent_nrow ;
+    inline R_xlen_t get_parent_index(int i) const {
+        RCPP_DEBUG_4( "ConstMatrixRow<%d>::get_parent_index(int = %d), parent_nrow = %d >> %d\n", RTYPE, i, parent_nrow, static_cast<R_xlen_t>(i) * parent_nrow )
+        return static_cast<R_xlen_t>(i) * parent_nrow ;
     }
 } ;
 }
