@@ -1,3 +1,11 @@
+2023-10-22 Aaron Lun <infinite.monkeys.with.keyboards@gmail.com>
+
+	* inst/include/Rcpp/vector/MatrixColumn.h: Cast integer index
+	to R_xlen_t to avoid integer overflow with large matrices.
+	* inst/include/Rcpp/vector/MatrixRow.h: Ditto.
+	* inst/include/Rcpp/vector/Vector.h: Remove stray cast to int
+	that causes overflow when returning the end iterator.
+
 2023-09-30  Dirk Eddelbuettel  <edd@debian.org>
 
 	* vignettes/rmd/Rcpp-introduction.Rmd (Rcpp): Correct caption of
